--- a/Analysis sales/Analysis-sales-data.Rmd
+++ b/Analysis sales/Analysis-sales-data.Rmd
@@ -10,7 +10,7 @@ require(arules)
 require(arulesViz)
 require(tidyverse)
 require(ca)
-load(file.path(getwd(), "data","data.Rdata"))
+load(file.path(getwd(),"..", "data","data.Rdata"))
 ```
 <br/>
 <br/>
@@ -99,26 +99,17 @@ Correspondence analysis is a popular tool for visualizing. This analysis applies
 It's nedeed to prepare [(contingenty tables)](https://en.wikipedia.org/wiki/Correspondence_analysis).
 
 
-```{r, tables, echo = TRUE, message = FALSE, warning = FALSE }
+```{r tables, echo = TRUE, message = FALSE, warning = FALSE }
+load(file.path(getwd(), "..", "data","dataCustomer.Rdata"))
 
-load(file.path(getwd(), "data","dataCustomer.Rdata"))
-
-dataCustomer <- dataCustomer %>%
+dataCustomer <- dataCustomer %>% as.data.frame()%>%
   select(c("Gender", "Age", "Occupation", "City_Category", "Stay_In_Current_City_Years", "Marital_Status", "sumOfPurchase"))%>%
-  mutate(purchaseQuantile = cut(sumOfPurchase, breaks = quantile(dataCustomer$sumOfPurchase, probs = seq(0, 1, 0.25))),
-         purchaseQuantile = purchaseQuantile/1000)
+  mutate(sumOfPurchase = sumOfPurchase/1000,
+    purchaseQuantile = cut(sumOfPurchase,
+                           breaks = quantile(sumOfPurchase, probs = seq(0, 1, 0.25)),
+                           include.lowest = TRUE))
 
-dataCustomer <- dataCustomer %>%
-  mutate(purchaseQuantile = cut(sumOfPurchase, breaks = quantile(dataCustomer$sumOfPurchase, probs = seq(0, 1, 0.25)), include.lowest = TRUE))
-
-dataCustomer$purchaseQuantile <-  case_when(dataCustomer$purchaseQuantile == "(566,6.92e+03]" ~ "566$-6920$",
-                                        dataCustomer$purchaseQuantile == "(6.92e+03,8.6e+03]" ~ "6920$-8600$",
-                                        dataCustomer$purchaseQuantile == "(8.6e+03,1.21e+04]" ~ "8600$-12100$",
-                                        dataCustomer$purchaseQuantile ==  "(1.21e+04,2.39e+04]" ~ "12100$-23900$",
-                                        TRUE ~ as.character(dataCustomer$purchaseQuantile))
-
-dataCustomer$purchaseQuantile <- factor(dataCustomer$purchaseQuantile, levels = sort(unique(dataCustomer$purchaseQuantile)))
-
+levels(dataCustomer$purchaseQuantile) <- c("(0-235$]", "(235$-513$]", "(513,1$-1100$]", "(1100$-]")
 
 tab1 <- with(dataCustomer, table(Age, purchaseQuantile))
 chisq.test(tab1)
